# advent_of_code_2024

./: .gitignore  LICENSE  README.md
python/: README.md  main.py  pyproject.toml  pyrightconfig.json
python/days/: day1.py
python/main/: main.py
python/src/advent_of_code_2024/: day1.py  day2.py
python/tests/: test_day1.py  test_day2.py
rust/: Cargo.toml
rust/src/: day1.rs  day2.rs  main.rs
