[tool.poetry]
name = "advent-of-code-2024"
version = "0.1.0"
description = ""
authors = ["Manshilin Oleg <manshilin.o@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
pylance = "^0.19.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"
ipython = "^8.30.0"
pyright = "^1.1.389"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
